# oh-no

./: .envrc  .gitignore  Cargo.toml  flake.nix  justfile  readme.md  rust-toolchain.yaml
.direnv/: flake-profile-89b4852a5af832c0c0f17804cd2484a319eb6512  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: hi3000kl3g1w8frylqsf5zz1vhpmih3x-source  ivv3shiylkmj9r7xjfh1l0h49nddh72h-source
.github/workflows/: build.yaml  check.yaml  lint.yaml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  types.rs
crates/core/src/parser/: expression.rs  identifiers.rs  mod.rs  select.rs  table.rs
crates/core/src/typecheck/: insert.rs  mod.rs  scalar.rs  select.rs
db_storage/: 000024.sst  000029.sst  000034.sst  IDENTITY  LOG  LOG.old.1699482961857610  LOG.old.1699482968551685  LOG.old.1699482970471189  LOG.old.1699482978672203  LOG.old.1699482980843352  LOG.old.1699482982840099  LOG.old.1699482990723166  LOG.old.1699482992648440  LOG.old.1699482994556648  LOG.old.1699483017719830  LOG.old.1699483019628904  LOG.old.1699483021544082  LOG.old.1699483030191719  LOG.old.1699483032111220  LOG.old.1699483034125684  LOG.old.1699483036053885  LOG.old.1699483050211930  LOG.old.1699483058583810  LOG.old.1699483060508931  LOG.old.1699483062447602  LOG.old.1699483064377385  LOG.old.1699483066289815  LOG.old.1699483068223218  LOG.old.1699483070140268  LOG.old.1699483072053585  LOG.old.1699483073963384  LOG.old.1699483075869784  MANIFEST-000116  OPTIONS-000118
src/: data.rs  insert.rs  lib.rs  main.rs  query.rs  typecheck.rs  types.rs
src/typecheck/: column.rs  (+4 more)
(+12 files in other folders)
