[package]
name = "rocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = {version = "0.21.0",default-features = false, features = [] }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"

[dev-dependencies]
rand = "0.8.5"
