[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
thiserror = "*"

[dev-dependencies]
rand = "0.8.5"
anyhow = "*"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
